<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imageVideo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/sample_0" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/tituloVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/titulo_video"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/titulo_programa" />

        <TextView
            android:id="@+id/descripcionVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_video"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/descripcion_programa" />
        
    </LinearLayout>

</LinearLayout>